--- a/style.css
+++ b/style.css
@@ -65,17 +65,25 @@ form {
 
 h1 {
     color: #04D361;
+    font-weight: 700;
 }
 
 h2 {
-    color: #E1E1E6; 
+    color: #E1E1E6;
+    font-family: Work Sans;
+    font-size: 20.5px;
+    font 
+    font-weight: 700; 
 }
 
 span {
    color: #A8A8A8;
+   font-weight: 400;
+   font-size: 18px;
 }
 
 #texto {
+    font-family: Spartan, Work Sans;
     position: absolute;
     width: 647px;
     height: 102px;
@@ -94,6 +102,7 @@ label {
 
 a {
     display: flex;
+    font-weight: 700;
     position: absolute;
     width: 196px;
     height: 24px;
